A new bootstrap version with default screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<p>app works!</p>
+<div id="wrapper">
+  <div id="article">
+    <h1>Good Luck!</h1>
+    <div>
+      <p>“Java is to JavaScript what Car is to Carpet.”</p>
+      <p>— Chris Heilmann</p>
+    </div>
+  </div>
+</div>
